# sinew

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  NOTES.md  README.md  ROADMAP.md  SECURITY.md  config.example.toml  package.json  plan.md  release-please-config.json
.githooks/: install.sh  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
.hooks/: install.sh  pre-commit
.husky/: pre-commit
Formula/: rustybar.rb
assets/: github-share_01.sig  icon.icns  logo.sig
docs/: astro.config.mjs  biome.json  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: ipc.md  (+2 more)
docs/src/styles/: custom.css
src/: app.rs  ipc.rs  launch_agent.rs  main.rs
src/components/: badge.rs  box_component.rs  callout.rs  columns.rs  divider.rs  lists.rs  mod.rs  skeleton.rs  spacer.rs  stack.rs  text.rs  theme.rs  title.rs  typography.rs
src/config/: mod.rs  types.rs
src/gpui_app/: bar.rs  camera.rs  mod.rs  panel.rs  popup.rs  popup_manager.rs  scheduler.rs
src/gpui_app/modules/: api_usage.rs  app_name.rs  battery.rs  calendar.rs  clock.rs  cpu.rs  date.rs  datetime.rs  demo.rs  disk.rs  external.rs  hisohiso.rs  memory.rs  mod.rs  news.rs  now_playing.rs  popup_host.rs  script.rs  separator.rs  skeleton_demo.rs  static_text.rs  temperature.rs  volume.rs  weather.rs  wifi.rs  window_title.rs
src/gpui_app/primitives/: container.rs  flex.rs  icon.rs  interactive.rs  mod.rs  skeleton.rs  slider.rs  spacer.rs  text.rs
src/gpui_app/theme/: mod.rs
src/modules/: app_name.rs  battery.rs  clock.rs  cpu.rs  date.rs  demo.rs  disk.rs  memory.rs  mod.rs  network.rs  now_playing.rs  script.rs  separator.rs  static_text.rs  timer.rs  volume.rs  weather.rs  wifi.rs  window_title.rs
src/render/: graphics.rs  mod.rs
src/view/: bar_view.rs  mod.rs  panel_view.rs  popup_view.rs
src/window/: bar_window.rs  click_monitor.rs  menu_bar_monitor.rs  mod.rs  mouse_monitor.rs  panel.rs  popup.rs  screen.rs  workspace_monitor.rs
(+7 files in other folders)
